--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@
 }
 
 /*Set the root item pls dont forget mega important */
+:root {
+  --button: rgb(55, 133, 169);
+  --focus: rgb(37, 181, 18);
+}
 
 body {
   margin: 0;
@@ -25,14 +29,27 @@ h6 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 20vh;
   background-color: beige;
+  gap: 5%;
 }
 
 .item-food {
   display: flex;
   flex-flow: column wrap;
   flex-grow: 3;
+}
+
+button {
+  background-color: var(--button);
+  border: 4px solid #ebebeb;
+  padding: 3em;
+}
+
+button:hover,
+button:focus {
+  background-color: var(--focus);
+  border: 4px solid #ebebeb;
+  padding: 3em;
 }
 
 nav {
@@ -49,13 +66,13 @@ main {
 }
 
 .item-photo {
-  font-size: 5rem;
+  font-size: 3rem;
   padding: 0 0.5em 0 0;
 }
 
 .item-order {
-  width: 10vh;
-  height: 10vh;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
 }
 
@@ -64,4 +81,51 @@ main {
   display: flex;
   flex-flow: column;
   margin: auto;
+}
+
+#icon-cart {
+  font-size: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  right: 3px;
+  color: #ebebeb;
+}
+
+.line {
+  background-image: linear-gradient(to left, var(--button), rgb(0, 0, 0));
+  width: 100%;
+  height: 5px;
+}
+
+@media (max-width: 1200px) {
+  .item {
+    flex-flow: row wrap;
+    gap: 20%;
+  }
+  .item-order {
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 60px;
+    border-radius: 20px;
+  }
+}
+
+@media (max-width: 990px) {
+  .item {
+    display: flex;
+    flex-flow: column wrap;
+  }
+  .item-photo {
+    margin-bottom: 0.5em;
+    position: relative;
+    left: 10px;
+  }
+  .item-food {
+    text-align: center;
+  }
 }
