--- a/src/styles.css
+++ b/src/styles.css
@@ -104,9 +104,12 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2em 1em;
+  padding: 0em 1em;
 }
 
+.summery-item:last-child {
+  border-bottom: 3px solid rgb(151, 115, 115);
+}
 .order {
   text-align: center;
   padding: 2em 0 0 0;
@@ -128,6 +131,12 @@ main {
   border: none;
   background-color: #fff;
   color: var(--delete);
+}
+
+.sum {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 @media (max-width: 1200px) {
   .item {
