--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,8 @@
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
+  background-color: rgb(221, 208, 208);
+  letter-spacing: 1px;
 }
 
 h1,
@@ -59,8 +61,13 @@ nav {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.logo-here {
   color: white;
   padding: 2em 2.5em;
+  backdrop-filter: blur(10px);
+  height: 100%;
 }
 
 main {
@@ -76,13 +83,12 @@ main {
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  box-shadow: 0px 11px 10px 2px #b0acac;
 }
 
 .container {
-  max-width: 50vw;
   display: flex;
   flex-flow: column;
-  margin: auto;
 }
 
 #icon-cart {
@@ -128,18 +134,22 @@ main {
 
 .remove-btn {
   border: none;
-  background-color: #fff;
-  color: #9c8e8e;
-  padding: 0em 1em;
+  background-color: rgb(221, 208, 208);
+  color: rgb(210, 72, 72);
+  padding: 0.5em 1em;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   flex-grow: 1;
   text-align: left;
+  display: flex;
+  align-items: flex-start;
 }
 .remove-btn:hover,
 .remove-btn:focus {
   border: none;
-  background-color: #fff;
+  background-color: #aaaaaa;
+  padding: 0.5em 1em;
   color: var(--delete);
-  padding: 0em 1em;
   display: block;
 }
 
@@ -161,6 +171,7 @@ main {
   border: none;
   margin-bottom: 10em;
   font-size: 1.3rem;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -184,7 +195,7 @@ main {
   flex-flow: column nowrap;
   justify-content: center;
   lighting-color: cadetblue;
-  height: 60vh;
+  height: 75vh;
   width: 40vw;
   position: fixed;
   top: 0;
@@ -194,7 +205,8 @@ main {
   margin: auto;
   background-color: #ebebeb;
   border: 3px solid var(--focus);
-  box-shadow: 22px 22px 100px #aaaaaa;
+  box-shadow: 0px 10px 10px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
 }
 .info {
   margin-top: 1em;
@@ -214,6 +226,10 @@ input {
   margin: 1em;
   background-color: var(--focus);
   cursor: pointer;
+  border-radius: 20px;
+  border: 2px solid black;
+  transform: translate(0, 0);
+  transition: transform 0.5s ease;
 }
 
 .pay-btn:hover,
@@ -222,6 +238,8 @@ input {
   font-size: 1.3rem;
   padding: 1em 1em;
   margin: 1em;
+  border: 2px solid black;
+  transform: scale(0.9);
 }
 
 .container-unlickable {
@@ -231,7 +249,7 @@ input {
 
 .thanks-to {
   background-color: rgb(122, 241, 122);
-  display: none
+  display: none;
 }
 
 .thanks-to h3,
@@ -240,7 +258,17 @@ input {
   padding: 0.5em;
 }
 
-
+.pay-close {
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  padding: 10px 10px;
+  border-radius: 20px;
+  background: #ebebeb;
+  cursor: pointer;
+}
 
 @media (max-width: 1200px) {
   .item {
@@ -270,5 +298,12 @@ input {
   }
   .item-food {
     text-align: center;
+  }
+}
+
+@media (min-width: 1210px) {
+  .container {
+    width: 50vw;
+    margin: auto;
   }
 }
