--- a/styles.css
+++ b/styles.css
@@ -264,6 +264,8 @@ input {
   justify-content: center;
   align-items: center;
   width: 10%;
+  margin-top: 10px;
+  margin-right: 10px;
   padding: 10px 10px;
   border-radius: 20px;
   background: #ebebeb;
